# hazmate

./: .env.example  .gitignore  README.md  REPORT.md  collector-config.yaml  hazmat-attributes-config.yaml  main.py  out.txt  pyproject.toml
cursor-chats/: cursor_create_pydantic_model_for_mercad.md
examples/: agent_usage_example.py  search_query_paginated.py
examples/agents/: agent.py  example_store.py
examples/queries/: categories.py  category.py  category_attributes.py  interacting_with_meli_api.py  search.py  search_paginated.py  search_query.py  subcategories.py
hazmate_builder/: __init__.py  __main__.py  app_config.py  auth.py
hazmate_builder/queries/: base.py  categories.py  category.py  category_attributes.py  product.py  search.py
hazmate_redirect_server/: __main__.py  config.py
scripts/: convert_jsonl_to_csv.py  evaluate_on_hazmat.py  filter_hazmat_items.py  find_all_category_attributes.py  list_all_subcategories.py  list_attributes_in_input_dataset.py  split_jsonl.py  split_labeled_items_by_hazmat.py  start_ngrok.sh
src/hazmate/agent/: __main__.py  agent.py  example_store.py  hazmat_traits.py  labeled_items.py  output_dataset.py  predictions.py
src/hazmate/builder/: __main__.py  auth.py  collector_config.py  input_dataset.py
src/hazmate/evaluation/: attribute_evaluation_config.py
src/hazmate/input_datasets/: __main__.py  auth.py  auth_config.py  collector_config.py  input_items.py
src/hazmate/redirect_server/: __main__.py
src/hazmate/utils/: async_itertools.py  frozendict.py  oauth.py  text.py  tokens.py
tests/: test_async_itertools.py
(+12 files in other folders)
